--- a/styles.css
+++ b/styles.css
@@ -177,27 +177,35 @@
     flex-direction: column;
     /* padding-inline: 1rem; */
     margin-top: 1rem;
+    box-sizing: border-box;
+    padding-left: 1rem;
   }
 
-  .point {
+  .timeline-point {
     position: absolute;
     top: 0;
     height: 100%;
-    opacity: 0.5;
+    opacity: 0.7;
     pointer-events: none;
-    width: 2px;
+    width: 3px;
   }
 
   .scrub-point {
-    background-color: red;
+    background-color: #ed2d07;
   }
 
   .cue-point {
-    background-color: blue;
+    background-color: orange;
   }
 
   .play-point {
-    background-color: green;
+    background-color: lightgreen;
+  }
+
+  .progress-canvas {
+    position: relative;
+    display: flex;
+    cursor: crosshair;
   }
 
   .progress-slider input {
