--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   body {
     margin: 0;
     overscroll-behavior: none;
+    height: 100%;
   }
 
   .root {
@@ -10,6 +11,9 @@
     background: #333;
     box-sizing: border-box;
     padding: 1rem 0rem 2rem 0.5rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
   }
 
   canvas {
