--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@
     color: #999;
   }
 
+  button.active,
   button:active {
     background: #666;
   }
@@ -111,7 +112,7 @@
   .tempo-slider input::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    height: 1rem;
+    height: 4rem;
     width: 2.5rem;
     margin-left: -20px;
     pointer-events: all;
@@ -119,12 +120,22 @@
     border-radius: 4px;
     background: rgba(255, 255, 255, 0.1);
     cursor: pointer;
+    transition: background-color 0.3s;
+  }
+
+  .tempo-slider input.active::-webkit-slider-thumb {
+    background: #666;
   }
 
   .tempo-slider input::-webkit-slider-runnable-track {
     background: #222;
     border-radius: 2px;
     width: 2px;
+    transition: background-color 0.3s;
+  }
+
+  .tempo-slider input.active::-webkit-slider-runnable-track {
+    background: #111;
   }
 
   .zero-notch {
@@ -204,17 +215,18 @@
     margin: 1rem 2rem;
   }
 
-  .seek-buttons button:active,
-  .pitch-buttons button:active {
-    border-color: #ed2d07;
-    box-shadow: 0 0 4px 1px #ed2d07;
-    transition: 0.1s;
-  }
-
   .set-cue-button button {
     height: 2.5rem;
     border-radius: 25px;
     width: 100%;
     padding-inline: 5rem;
     margin: 1rem;
+  }
+
+  .seek-buttons button.active,
+  .pitch-buttons button.active,
+  .set-cue-button button.active {
+    border-color: #ed2d07;
+    box-shadow: 0 0 4px 1px #ed2d07;
+    transition: 0.1s;
   }
